ajout css header, menu et lien actif

--- a/css/main.css
+++ b/css/main.css
@@ -105,3 +105,28 @@ header nav ul li a.actif {
 /*****************************************
  PIED DE PAGE DU SITE
 ******************************************/
+footer {
+    text-align: center;
+    padding: 50px 0 20px;
+}
+
+footer nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+footer nav ul li {
+    display: inline-block ;
+}
+
+footer nav ul li a img {
+    max-width: 50px;
+    margin: 0 15px;
+    filter: grayscale(1);
+    transition: filter 500ms linear;
+}
+
+footer nav ul li a:hover img {
+    filter: grayscale(0);
+}
