--- a/css/main.css
+++ b/css/main.css
@@ -31,10 +31,6 @@ a {
     text-decoration: none;
 }
 
-a:hover {
-    text-decoration: underline;
-}
-
 h1,
 h2 {
     font-family: 'Changa One', serif;
@@ -79,19 +75,91 @@ header .metier {
     margin-top: -5px;
 }
 
+/*****************************************
+MENU DE NAVIGATION
+******************************************/
 header nav ul {
     list-style-type: none;
     padding: 0;
 }
 
+header nav ul li {
+    display: inline-block;
+}
+
+header nav ul li a {
+    padding: 15px 10px;
+    color: #fdfffc;
+    font-weight: 800;
+}
+/* Les liens survolés et le lien actif du menus sont en bleu */
+header nav ul li a:hover,
+header nav ul li a.actif {
+    color: #2ec4b6;
+}
+
+header nav ul li [href="index.html"] {
+    display: none; /* cache un élément */
+}
 
 /*****************************************
  CONTENU PRINCIPAL DU SITE
 ******************************************/
+main {
+    padding: 0 5%;
+}
 
-
+main a:hover {
+    text-decoration: underline;
+}
 
 /*****************************************
  PIED DE PAGE DU SITE
 ******************************************/
+footer {
+    text-align: center;
+    margin: 50px 0 30px; /* 50px haut, 0 gauch/droite, 30px bas*/
+}
 
+footer nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+footer nav ul li {
+    display: inline-block;
+}
+
+footer nav img {
+    max-width: 50px;
+    margin: 0 15px;
+    filter: grayscale(1);
+    transition: all 300ms linear;
+}
+
+footer nav img:hover {
+    max-width: 55px;
+    filter: grayscale(0);
+}
+
+/*****************************************
+ PAGE INDEX
+******************************************/
+.page-index .realisations {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.page-index .realisations li {
+    flex-basis: 50%;
+    flex-grow: 2;
+    padding: 20px 2.5%;
+}
+
+.page-index .realisations li figure {
+    margin: 0;
+}
