--- a/css/main.css
+++ b/css/main.css
@@ -163,3 +163,12 @@ footer nav img:hover {
 .page-index .realisations li figure {
     margin: 0;
 }
+/*****************************************
+ PAGE INFOS
+******************************************/
+.page-infos .photo-laure {
+    float: left;
+    max-width: 150px;
+    margin-right: 30px;
+    border-radius: 50%;
+}
